--- a/public/chataudio.html
+++ b/public/chataudio.html
@@ -2,8 +2,8 @@
 <head>
   <title>PeerJS - Video chat example</title>
   <link rel="stylesheet" href="style.css">
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
-  <script src="http://cdn.peerjs.com/0.3/peer.min.js"></script>
+  <script type="text/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="/bower_components/peerjs/peer.min.js"></script>
   <script>
 
     // Compatibility shim
