--- a/public/chataudio.html
+++ b/public/chataudio.html
@@ -10,7 +10,17 @@
     navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
 
     // PeerJS object
-    var peer = new Peer({ host: '/', port: '443', path: '/peerjs' });
+    //var peer = new Peer({ host: '/', port: '443', path: '/peerjs' });
+    var peer = new Peer({
+      host:'/', 
+      secure:true, 
+      port:443, 
+      key: 'peerjs', 
+      path: '/peerjs', 
+      config: {
+        'iceServers': [{ url: 'stun:stun.l.google.com:19302' }]
+      }
+    });
 
     peer.on('open', function(){
       $('#my-id').text(peer.id);
