implemented setInterval to keep connection alive

--- a/public/chataudio.html
+++ b/public/chataudio.html
@@ -24,6 +24,7 @@
 
     peer.on('open', function(){
       $('#my-id').text(peer.id);
+      setInterval(function(){ peer.send('ping')},5000);
     });
 
     // Receiving a call
