--- a/public/chataudio.html
+++ b/public/chataudio.html
@@ -21,10 +21,16 @@
         'iceServers': [{ url: 'stun:stun.l.google.com:19302' }]
       }
     });
+    peer.on('connection', function(dataConnection) { 
+        
+        setInterval(function(){
+            dataConnection.send('ping');
+        },5000);
+     })
 
     peer.on('open', function(){
       $('#my-id').text(peer.id);
-      setInterval(function(){ peer.send('ping')},5000);
+      
     });
 
     // Receiving a call
