--- a/public/chataudio.html
+++ b/public/chataudio.html
@@ -10,17 +10,17 @@
     navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
 
     // PeerJS object
-    var peer = new Peer({ host: '/', port: '9000', path: '/peerjs' });
-    // var peer = new Peer({
-    //   host:'/', 
-    //   secure:true, 
-    //   port:443, 
-    //   key: 'peerjs', 
-    //   path: '/peerjs', 
-    //   config: {
-    //     'iceServers': [{ url: 'stun:stun.l.google.com:19302' }]
-    //   }
-    // });
+    //var peer = new Peer({ host: '/', port: '9000', path: '/peerjs' });
+    var peer = new Peer({
+      host:'/', 
+      secure:true, 
+      port:443, 
+      key: 'peerjs', 
+      path: '/peerjs', 
+      config: {
+        'iceServers': [{ url: 'stun:stun.l.google.com:19302' }]
+      }
+    });
     
     
     // pass the peer instance, and it will start sending heartbeats
