--- a/public/chataudio.html
+++ b/public/chataudio.html
@@ -12,7 +12,7 @@
     // PeerJS object
     //var peer = new Peer({ host: '/', port: '9000', path: '/peerjs' });
     var peer = new Peer({
-      host:'https://wetalkidev.herokuapp.com', 
+      host:'wetalkidev.herokuapp.com', 
       secure:true, 
       port:443, 
       key: 'peerjs', 
